src/components/Collapse/styles/collapse.less
.customCollapse {
  :global(.ant-collapse-content) {
    border-top: 0 !important;
    border-radius: 0 !important;
  }
  :global(.ant-collapse-item-active) {
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
  }
}
.customHeaderCollapse {
  border-bottom: 0 !important;
  border-radius: 0 !important;
  :global(.ant-collapse-header) {
    display: flex !important;
    align-items: center !important;
    justify-content: center;
    height: 40px;
    padding: 0 48px 0 0 !important;
    background: #fff;
    border-radius: 0 !important;
    box-shadow: @border-bottom-light;
  }
}

